samples/_failures_safe/1761126880_2ec0a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce26221d.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_ce26221d.c:144:5: error: expected declaration or statement at end of input
  144 |     }
      |     ^
